Etape card done

--- a/customisation.html
+++ b/customisation.html
@@ -402,7 +402,59 @@
                 />
             </button>
         </div>
+        <div class="etape">
+            <!-- 1 -->
+            <div class="etape-card">
+                <div class="etape-ring"><span class="etape-num">1</span></div>
+                <div class="etape-content">
+                    <h2 class="etape-title">Etape 1</h2>
+                    <a class="etape-pill" href="#">
+                        <span>choix template</span>
+                        <!-- 🔁 Remplace ce src par le chemin de TON icône flèche -->
+                        <img src="asset/icon/Arrow Head.png" alt="" />
+                    </a>
+                </div>
+            </div>
 
+            <!-- 2 -->
+            <div class="etape-card">
+                <div class="etape-ring"><span class="etape-num">2</span></div>
+                <div class="etape-content">
+                    <h2 class="etape-title">Etape 2</h2>
+                    <a class="etape-pill" href="#">
+                        <span>Choix Design</span>
+                        <!-- 🔁 Remplace ce src par le chemin de TON icône flèche -->
+                        <img src="asset/icon/Arrow Head.png" alt="" />
+                    </a>
+                </div>
+            </div>
+
+            <!-- 3 (pilule plus petite) -->
+            <div class="etape-card">
+                <div class="etape-ring"><span class="etape-num">3</span></div>
+                <div class="etape-content">
+                    <h2 class="etape-title">Etape 3</h2>
+                    <a class="etape-pill etape-pill--sm" href="#">
+                        <span>filtres</span>
+                        <!-- 🔁 Remplace ce src par le chemin de TON icône flèche -->
+                        <img src="asset/icon/Arrow Head.png" alt="" />
+                    </a>
+                </div>
+            </div>
+
+            <!-- 4 -->
+            <div class="etape-card">
+                <div class="etape-ring"><span class="etape-num">4</span></div>
+                <div class="etape-content">
+                    <h2 class="etape-title">Etape 4</h2>
+                    <a class="etape-pill" href="#">
+                        <span>Aperçu live</span>
+                        <!-- 🔁 Remplace ce src par le chemin de TON icône flèche -->
+                        <img src="asset/icon/Arrow Head.png" alt="" />
+                    </a>
+                </div>
+            </div>
+        </div>
         <footer class="tm-footer">
             <div class="tmf-grid">
                 <!-- ===== Colonne 1 : Logo + baseline + réseaux ===== -->
@@ -414,7 +466,7 @@
                         <!-- 🔁 LOGO MARQUE : remplace le src par TON fichier -->
                         <img
                             class="tmf-logo-mark"
-                            src="asset/Logo/logo_tone_maker.png"
+                            src="asset/icon/Arrow Head.png"
                             alt=""
                         />
                     </div>
