Index et customisation done

--- a/Index.html
+++ b/Index.html
@@ -79,23 +79,28 @@
                     <div class="user-placeholder">Invité</div>
 
                     <nav class="mobile-nav-links">
-                        <a href="#">
+                        <a href="mon-espace.html">
                             <img src="asset/icon/user regular.png" alt="" />
                             Mon espace
                         </a>
-                        <a href="#">
+
+                        <a href="magasin.html">
                             <img src="asset/icon/shop.png" alt="" />
                             Magasin et partenaires
                         </a>
-                        <a href="#">
+
+                        <a href="produits.html">
                             <img src="asset/icon/box.png" alt="" />
                             Tout les produits
                         </a>
-                        <a href="#">
+
+                        <!-- ✅ Customisation corrigé -->
+                        <a href="customisation.html">
                             <img src="asset/icon/edit.png" alt="" />
                             Customisation
                         </a>
-                        <a href="#">
+
+                        <a href="communaute.html">
                             <img src="asset/icon/group.png" alt="" />
                             Communauté
                         </a>
@@ -171,34 +176,76 @@
         <!-- 🔽 CONTENU QUI SUIT -->
         <main class="main-content">
             <section class="logos">
-                <img
-                    src="asset/IMG/Marques_partenaires/behringer.png"
-                    alt="Logos partenaires"
-                />
-                <img
-                    src="asset/IMG/Marques_partenaires/fender.png"
-                    alt="Logos partenaires"
-                />
-                <img
-                    src="asset/IMG/Marques_partenaires/gibson.png"
-                    alt="Logo partenaires"
-                />
-                <img
-                    src="asset/IMG/Marques_partenaires/harley_benton.png"
-                    alt="Logos partenaires"
-                />
-                <img
-                    src="asset/IMG/Marques_partenaires/roland.png"
-                    alt="Logos partenaires"
-                />
-                <img
-                    src="asset/IMG/Marques_partenaires/shure.png"
-                    alt="Logos partenaires"
-                />
-                <img
-                    src="asset/IMG/Marques_partenaires/yamaha.png"
-                    alt="Logos partenaires"
-                />
+                <div class="logos-mask">
+                    <div class="logos-track">
+                        <!-- Liste originale -->
+                        <img
+                            src="asset/IMG/Marques_partenaires/behringer.png"
+                            alt="Behringer"
+                        />
+                        <img
+                            src="asset/IMG/Marques_partenaires/fender.png"
+                            alt="Fender"
+                        />
+                        <img
+                            src="asset/IMG/Marques_partenaires/gibson.png"
+                            alt="Gibson"
+                        />
+                        <img
+                            src="asset/IMG/Marques_partenaires/harley_benton.png"
+                            alt="Harley Benton"
+                        />
+                        <img
+                            src="asset/IMG/Marques_partenaires/roland.png"
+                            alt="Roland"
+                        />
+                        <img
+                            src="asset/IMG/Marques_partenaires/shure.png"
+                            alt="Shure"
+                        />
+                        <img
+                            src="asset/IMG/Marques_partenaires/yamaha.png"
+                            alt="Yamaha"
+                        />
+
+                        <!-- Dupliqué pour la boucle infinie -->
+                        <img
+                            src="asset/IMG/Marques_partenaires/behringer.png"
+                            alt=""
+                            aria-hidden="true"
+                        />
+                        <img
+                            src="asset/IMG/Marques_partenaires/fender.png"
+                            alt=""
+                            aria-hidden="true"
+                        />
+                        <img
+                            src="asset/IMG/Marques_partenaires/gibson.png"
+                            alt=""
+                            aria-hidden="true"
+                        />
+                        <img
+                            src="asset/IMG/Marques_partenaires/harley_benton.png"
+                            alt=""
+                            aria-hidden="true"
+                        />
+                        <img
+                            src="asset/IMG/Marques_partenaires/roland.png"
+                            alt=""
+                            aria-hidden="true"
+                        />
+                        <img
+                            src="asset/IMG/Marques_partenaires/shure.png"
+                            alt=""
+                            aria-hidden="true"
+                        />
+                        <img
+                            src="asset/IMG/Marques_partenaires/yamaha.png"
+                            alt=""
+                            aria-hidden="true"
+                        />
+                    </div>
+                </div>
             </section>
 
             <!-- ===== Intro texte avant la navbar/slider (namespace: tmx-) ===== -->
