--- a/customisation.html
+++ b/customisation.html
@@ -11,59 +11,64 @@
     </head>
 
     <body>
-        <header>
-            <!-- ✅ Logo mobile centré (en dehors de .navbar) -->
-            <div class="mobile-logo">
-                <img
-                    src="asset/Logo/logo_tone_maker.png"
-                    alt="Logo Tone Maker"
-                />
-                <span class="logo-text"
-                    ><em>Tone</em> <strong>Maker</strong></span
-                >
-            </div>
-
-            <!-- ✅ Barre de navigation -->
-            <div class="navbar">
-                <!-- 🔽 Menu burger (mobile uniquement) -->
-                <button class="burger" aria-label="Menu mobile">&#9776;</button>
-
-                <!-- 🔽 Logo desktop (desktop uniquement) -->
-                <div class="input nav-left">
-                    <img src="asset/Logo/logo_tone_maker.png" alt="Logo" />
-                    <span class="value desktop-only">Tone Maker</span>
-                </div>
-
-                <div class="input nav-center desktop-only">
-                    <button class="value">Magasin et partenaires</button>
-                    <button class="value">Tout les produits</button>
-                    <button class="value" aria-current="page">
-                        Customisation
-                    </button>
-                    <button class="value">Communauté</button>
-                    <button class="value">Mon espace</button>
-                </div>
-
-                <!-- 🔽 Icônes à droite -->
-                <div class="input nav-right">
-                    <!-- Desktop -->
-                    <button class="value desktop-only">Profil</button>
-                    <button class="value desktop-only">Mes commandes</button>
-                </div>
-            </div>
-
-            <!-- 🔽 Menu mobile slide (masqué par défaut) -->
-            <!-- Mobile -->
+    <header>
+    <!-- ✅ Logo mobile centré (en dehors de .navbar) -->
+    <div class="mobile-logo">
+        <a href="Index.html">
             <img
-                class="icon-mobile-only"
-                src="asset/icon/user.png"
-                alt="Profil"
+                src="asset/Logo/logo_tone_maker.png"
+                alt="Logo Tone Maker"
             />
-            <img
-                class="icon-mobile-only"
-                src="asset/icon/cart.png"
-                alt="Panier"
-            />
+        </a>
+        <span class="logo-text">
+            <em>Tone</em> <strong>Maker</strong>
+        </span>
+    </div>
+
+    <!-- ✅ Barre de navigation -->
+    <div class="navbar">
+        <!-- 🔽 Menu burger (mobile uniquement) -->
+        <button class="burger" aria-label="Menu mobile">&#9776;</button>
+
+        <!-- 🔽 Logo desktop (desktop uniquement) -->
+        <div class="input nav-left">
+            <a href="Index.html">
+                <img src="asset/Logo/logo_tone_maker.png" alt="Logo" />
+            </a>
+            <span class="value desktop-only">Tone Maker</span>
+        </div>
+
+        <div class="input nav-center desktop-only">
+            <button class="value">Magasin et partenaires</button>
+            <button class="value">Tout les produits</button>
+            <button class="value" aria-current="page">
+                Customisation
+            </button>
+            <button class="value">Communauté</button>
+            <button class="value">Mon espace</button>
+        </div>
+
+        <!-- 🔽 Icônes à droite -->
+        <div class="input nav-right">
+            <!-- Desktop -->
+            <button class="value desktop-only">Profil</button>
+            <button class="value desktop-only">Mes commandes</button>
+        </div>
+    </div>
+
+    <!-- 🔽 Menu mobile slide (masqué par défaut) -->
+    <!-- Mobile -->
+    <img
+        class="icon-mobile-only"
+        src="asset/icon/user.png"
+        alt="Profil"
+    />
+    <img
+        class="icon-mobile-only"
+        src="asset/icon/cart.png"
+        alt="Panier"
+    />
+</header>
 
             <div class="mobile-menu" id="mobileMenu">
                 <div class="mobile-menu-content">
