lien avec les autres pages done

--- a/customisation.html
+++ b/customisation.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="input nav-center desktop-only">
-            <button class="value">Magasin et partenaires</button>
+            <a class="value" href="magasin.html">Magasin et partenaires</a>
             <button class="value">Tout les produits</button>
             <button class="value" aria-current="page">
                 Customisation
@@ -86,7 +86,7 @@
                             <img src="asset/icon/user regular.png" alt="" />
                             Mon espace
                         </a>
-                        <a href="#">
+                        <a href="magasin.html">
                             <img src="asset/icon/shop.png" alt="" />
                             Magasin et partenaires
                         </a>
