--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,8 @@
 
                 <!-- 🔽 Navigation centre (desktop uniquement) -->
                 <div class="input nav-center desktop-only">
-                    <button class="value">Magasin et partenaires</button>
+                    <a class="value" href="magasin.html">Magasin et partenaires</a>
+
                     <button class="value">Tout les produits</button>
 
                     <!-- ✅ Lien qui envoie vers customisation.html -->
