fautes header de merde corriger

--- a/customisation.html
+++ b/customisation.html
@@ -11,113 +11,113 @@
     </head>
 
     <body>
-    <header>
-    <!-- ✅ Logo mobile centré (en dehors de .navbar) -->
-    <div class="mobile-logo">
-        <a href="Index.html">
-            <img
-                src="asset/Logo/logo_tone_maker.png"
-                alt="Logo Tone Maker"
-            />
-        </a>
-        <span class="logo-text">
-            <em>Tone</em> <strong>Maker</strong>
-        </span>
-    </div>
+        <header>
+            <!-- ✅ Logo mobile centré (en dehors de .navbar) -->
+            <div class="mobile-logo">
+                <a href="Index.html">
+                    <img
+                        src="asset/Logo/logo_tone_maker.png"
+                        alt="Logo Tone Maker"
+                    />
+                </a>
+                <span class="logo-text">
+                    <em>Tone</em> <strong>Maker</strong>
+                </span>
+            </div>
 
-    <!-- ✅ Barre de navigation -->
-    <div class="navbar">
-        <!-- 🔽 Menu burger (mobile uniquement) -->
-        <button class="burger" aria-label="Menu mobile">&#9776;</button>
+            <!-- ✅ Barre de navigation -->
+            <div class="navbar">
+                <!-- 🔽 Menu burger (mobile uniquement) -->
+                <button class="burger" aria-label="Menu mobile">&#9776;</button>
 
-        <!-- 🔽 Logo desktop (desktop uniquement) -->
-        <div class="input nav-left">
-            <a href="Index.html">
-                <img src="asset/Logo/logo_tone_maker.png" alt="Logo" />
-            </a>
-            <span class="value desktop-only">Tone Maker</span>
-        </div>
-
-        <div class="input nav-center desktop-only">
-            <a class="value" href="magasin.html">Magasin et partenaires</a>
-            <button class="value">Tout les produits</button>
-            <button class="value" aria-current="page">
-                Customisation
-            </button>
-            <button class="value">Communauté</button>
-            <button class="value">Mon espace</button>
-        </div>
-
-        <!-- 🔽 Icônes à droite -->
-        <div class="input nav-right">
-            <!-- Desktop -->
-            <button class="value desktop-only">Profil</button>
-            <button class="value desktop-only">Mes commandes</button>
-        </div>
-    </div>
-
-    <!-- 🔽 Menu mobile slide (masqué par défaut) -->
-    <!-- Mobile -->
-    <img
-        class="icon-mobile-only"
-        src="asset/icon/user.png"
-        alt="Profil"
-    />
-    <img
-        class="icon-mobile-only"
-        src="asset/icon/cart.png"
-        alt="Panier"
-    />
-</header>
-
-            <div class="mobile-menu" id="mobileMenu">
-                <div class="mobile-menu-content">
-                    <div class="logo-section">
-                        <span class="logo-name"
-                            ><em>Tone</em> <strong>Maker</strong></span
-                        >
+                <!-- 🔽 Logo desktop (desktop uniquement) -->
+                <div class="input nav-left">
+                    <a href="Index.html">
                         <img src="asset/Logo/logo_tone_maker.png" alt="Logo" />
-                    </div>
+                    </a>
+                    <span class="value desktop-only">Tone Maker</span>
+                </div>
 
-                    <div class="user-placeholder">Invité</div>
-
-                    <nav class="mobile-nav-links">
-                        <a href="#">
-                            <img src="asset/icon/user regular.png" alt="" />
-                            Mon espace
-                        </a>
-                        <a href="magasin.html">
-                            <img src="asset/icon/shop.png" alt="" />
-                            Magasin et partenaires
-                        </a>
-                        <a href="#">
-                            <img src="asset/icon/box.png" alt="" />
-                            Tout les produits
-                        </a>
-                        <a href="#">
-                            <img src="asset/icon/edit.png" alt="" />
-                            Customisation
-                        </a>
-                        <a href="#">
-                            <img src="asset/icon/group.png" alt="" />
-                            Communauté
-                        </a>
-                    </nav>
-
-                    <button class="cta-join">
-                        Rejoignez notre communauté !
+                <div class="input nav-center desktop-only">
+                    <a class="value" href="magasin.html"
+                        >Magasin et partenaires</a
+                    >
+                    <button class="value">Tout les produits</button>
+                    <button class="value" aria-current="page">
+                        Customisation
                     </button>
+                    <button class="value">Communauté</button>
+                    <button class="value">Mon espace</button>
+                </div>
 
-                    <div class="footer-links">
-                        <a href="#">Privacy Policy</a>
-                        <a href="#">Terms & Conditions</a>
-                        <a href="#">Cookie Policy</a>
-                        <a href="#">Contact</a>
-                        <p>Copyright 2025 Company Name.</p>
-                    </div>
+                <!-- 🔽 Icônes à droite -->
+                <div class="input nav-right">
+                    <!-- Desktop -->
+                    <button class="value desktop-only">Profil</button>
+                    <button class="value desktop-only">Mes commandes</button>
                 </div>
             </div>
+
+            <!-- 🔽 Menu mobile slide (masqué par défaut) -->
+            <!-- Mobile -->
+            <img
+                class="icon-mobile-only"
+                src="asset/icon/user.png"
+                alt="Profil"
+            />
+            <img
+                class="icon-mobile-only"
+                src="asset/icon/cart.png"
+                alt="Panier"
+            />
         </header>
+
+        <div class="mobile-menu" id="mobileMenu">
+            <div class="mobile-menu-content">
+                <div class="logo-section">
+                    <span class="logo-name"
+                        ><em>Tone</em> <strong>Maker</strong></span
+                    >
+                    <img src="asset/Logo/logo_tone_maker.png" alt="Logo" />
+                </div>
+
+                <div class="user-placeholder">Invité</div>
+
+                <nav class="mobile-nav-links">
+                    <a href="#">
+                        <img src="asset/icon/user regular.png" alt="" />
+                        Mon espace
+                    </a>
+                    <a href="magasin.html">
+                        <img src="asset/icon/shop.png" alt="" />
+                        Magasin et partenaires
+                    </a>
+                    <a href="#">
+                        <img src="asset/icon/box.png" alt="" />
+                        Tout les produits
+                    </a>
+                    <a href="#">
+                        <img src="asset/icon/edit.png" alt="" />
+                        Customisation
+                    </a>
+                    <a href="#">
+                        <img src="asset/icon/group.png" alt="" />
+                        Communauté
+                    </a>
+                </nav>
+
+                <button class="cta-join">Rejoignez notre communauté !</button>
+
+                <div class="footer-links">
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms & Conditions</a>
+                    <a href="#">Cookie Policy</a>
+                    <a href="#">Contact</a>
+                    <p>Copyright 2025 Company Name.</p>
+                </div>
+            </div>
+        </div>
+
         <!-- 🔽 Bouton "Créer ma guitare" fixé en bas à droite -->
         <div class="create-guitar-container">
             <button class="create-guitar-button">
