barre de recherche et fiche partenaires done

--- a/magasin.html
+++ b/magasin.html
@@ -43,7 +43,7 @@
                         Magasin et partenaires
                     </button>
                     <button class="value">Tout les produits</button>
-                     <a class="value" href="customisation.html">Customisation</a>
+                    <a class="value" href="customisation.html">Customisation</a>
                     <button class="value">Communauté</button>
                     <button class="value">Mon espace</button>
                 </div>
@@ -131,6 +131,58 @@
                 vous . Essayez, récupérez ou faites réparer vos instruments dans
                 nos points de vente.
             </p>
+        </section>
+        <!-- Barre de recherche -->
+        <form class="searchbar" action="#" method="get">
+            <input
+                type="text"
+                class="searchbar-input"
+                name="q"
+                placeholder="Rechercher par ville, nom de magasin…"
+                aria-label="Rechercher"
+            />
+            <button class="searchbar-btn" type="submit">Customisation</button>
+        </form>
+        <section class="tm-stats">
+            <!-- Fiche 1 -->
+            <article class="fich">
+                <div class="tm-icon tm-grad-teal">
+                    <!-- Remplace le chemin ci-dessous par ton icône (ex: ./asset/icon/store.svg) -->
+                    <img src="asset/icon/small-shop.png" alt="" />
+                </div>
+                <div class="tm-value">7</div>
+                <div class="tm-label">Partenaires</div>
+            </article>
+
+            <!-- Fiche 2 -->
+            <article class="fich">
+                <div class="tm-icon tm-grad-pink">
+                    <!-- Remplace le chemin ci-dessous par ton icône -->
+                    <img src="asset/icon/city.png" alt="" />
+                </div>
+                <div class="tm-value">12</div>
+                <div class="tm-label">Villes</div>
+            </article>
+
+            <!-- Fiche 3 -->
+            <article class="fich">
+                <div class="tm-icon tm-grad-purple">
+                    <!-- Remplace le chemin ci-dessous par ton icône -->
+                    <img src="asset/icon/map-pin.png" alt="" />
+                </div>
+                <div class="tm-value">5</div>
+                <div class="tm-label">Click and collect</div>
+            </article>
+
+            <!-- Fiche 4 -->
+            <article class="fich">
+                <div class="tm-icon tm-grad-blue">
+                    <!-- Remplace le chemin ci-dessous par ton icône -->
+                    <img src="asset/icon/star.png" alt="" />
+                </div>
+                <div class="tm-value">4,8</div>
+                <div class="tm-label">Note moyenne</div>
+            </article>
         </section>
 
         <footer class="tm-footer">
