Nos types de partenaires

--- a/magasin.html
+++ b/magasin.html
@@ -184,7 +184,55 @@
                 <div class="tm-label">Note moyenne</div>
             </article>
         </section>
+        <!-- ===== Titre + Sous-titre ===== -->
+        <section class="tm-intro">
+            <h1 class="tm-intro__title">Nos types de partenaires</h1>
+            <p class="tm-intro__sub">
+                Découvrez les différents types d’établissments partenaires de
+                Tone Maker
+            </p>
+        </section>
+        <section class="types-container">
+            <!-- Fiche 1 -->
+            <article class="type-partenaire">
+                <div class="tp-icon">
+                    <!-- Remplace le chemin ci-dessous par ton icône (ex: ./asset/icon/luthier.svg) -->
+                    <img src="asset/icon/user.png" alt="" />
+                </div>
+                <h3 class="tp-title">Luthiers</h3>
+                <p class="tp-desc">
+                    Artisans spécialisés dans la création et réparation sur
+                    mesure
+                </p>
+                <span class="tp-badge">1 établissement</span>
+            </article>
 
+            <!-- Fiche 2 -->
+            <article class="type-partenaire">
+                <div class="tp-icon">
+                    <!-- Remplace le chemin ci-dessous par ton icône -->
+                    <img src="asset/icon/small-sho.png" alt="" />
+                </div>
+                <h3 class="tp-title">Boutiques</h3>
+                <p class="tp-desc">
+                    Magasins spécialisés avec large choix d'instruments
+                </p>
+                <span class="tp-badge">2 établissements</span>
+            </article>
+
+            <!-- Fiche 3 -->
+            <article class="type-partenaire">
+                <div class="tp-icon">
+                    <!-- Remplace le chemin ci-dessous par ton icône -->
+                    <img src="asset/icon/citi.png" alt="" />
+                </div>
+                <h3 class="tp-title">Ateliers</h3>
+                <p class="tp-desc">
+                    Espaces de création et de personnalisation
+                </p>
+                <span class="tp-badge">2 établissements</span>
+            </article>
+        </section>
         <footer class="tm-footer">
             <div class="tmf-grid">
                 <!-- ===== Colonne 1 : Logo + baseline + réseaux ===== -->
