--- a/magasin.html
+++ b/magasin.html
@@ -233,6 +233,18 @@
                 <span class="tp-badge">2 établissements</span>
             </article>
         </section>
+        <!-- ===== Titre + Sous-titre ===== -->
+        <section class="tm-intro">
+            <h1 class="tm-intro__title">Click and collect</h1>
+            <p class="tm-intro__sub">
+                Commandez en ligne et récupérez vos instruments dans nos
+                magasins partenaires
+            </p>
+        </section>
+        <section>
+            <p class="tm-description">Les avantages du click and collect</p>
+        </section>
+
         <footer class="tm-footer">
             <div class="tmf-grid">
                 <!-- ===== Colonne 1 : Logo + baseline + réseaux ===== -->
